# aiohttp-messager

./: .gitignore  Makefile  __main__.py  docker-compose.yml  pyproject.toml  requirements.txt
docker/: app-entrypoint.sh  app.Dockerfile  postgres.Dockerfile
src/: __main__.py
src/app/: routes.py  view.py  views.py
src/app/auth/: views.py
src/app/templates/: auth.html  base.html  chat.html  index.html
src/config/: config.py  setup.py
src/database/: connect.py  models.py
src/logger/: handlers.py  setup.py
src/static/css/: style.css
src/static/js/: main.js
src/utils/: context_processors.py  decorators.py  queries.py  user_sessions.py
