[tool.poetry]
name = "aiohttp-messager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
aiohttp-security = "^0.4.0"
aiohttp-session = "^2.12.0"
aiohttp-jinja2 = "^1.5.1"
jinja2 = "^3.1.2"
asyncpg = "^0.28.0"
redis = "^4.6.0"
environs = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
